# opencv-cube-solver

./: .gitignore  CMakeLists.txt  README.md
cppkociemba/: CMakeLists.txt  cache_manager.cpp  coordinatecube.cpp  cubeface.cpp  cubestate.cpp  kociemba.cpp
cppkociemba/include/: cache_manager.h  coordinatecube.h  cube.h  cubestate.h  kociemba.h
include/: cube.h  cube_recognize.h  cubeface.h  search.h
src/: CMakeLists.txt  cache_manager.cpp  coordinatecube.cpp  cube_recognize.cpp  cubeface.cpp  cubestate.cpp  main.cpp  search.cpp
tests/: case100
